--- a/public/index.html
+++ b/public/index.html
@@ -5,111 +5,200 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Private Chat App</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
       font-family: 'Orbitron', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #1e1e2f, #2e2e4f);
-      color: #fff;
+      background: #fff;
+      color: #212529;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
     .auth-container, .chat-container {
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 2rem;
     }
     .auth-box {
-      background: #292942;
-      border-radius: 10px;
+      background: #ffffff;
+      border-radius: 12px;
       padding: 2rem;
       margin: 1rem;
-      box-shadow: 0 0 10px #444;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      width: 300px;
     }
     .auth-box input, .auth-box button {
       display: block;
       margin: 10px 0;
       padding: 10px;
       width: 100%;
-      border: none;
-      border-radius: 5px;
+      border: 1px solid #ced4da;
+      border-radius: 8px;
     }
     .auth-box input {
-      background: #1f1f30;
-      color: #fff;
+      background: #fff;
+      color: #212529;
     }
     .auth-box button {
-      background: #3a3af3;
+      background: #007bff;
       color: white;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+    .auth-box button:hover {
+      background: #0056b3;
     }
     .top-bar {
       display: flex;
       justify-content: space-between;
       width: 100%;
-      background: #1c1c2d;
+      background: #ffffff;
       padding: 1rem;
+      border-bottom: 1px solid #dee2e6;
+      align-items: center;
     }
     .top-bar input {
       padding: 0.5rem;
-      border-radius: 5px;
-      border: none;
+      border-radius: 6px;
+      border: 1px solid #ced4da;
       width: 200px;
     }
-    .friends-list, .messages {
+    .top-bar button {
+      margin-left: 8px;
+      background: none;
+      border: none;
+      color: #007bff;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .top-bar button i {
+      pointer-events: none;
+    }
+    .friends-list {
       width: 100%;
-      max-height: 300px;
+      background: #ffffff;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      margin-bottom: 1rem;
+      max-height: 250px;
       overflow-y: auto;
-      margin: 1rem 0;
-    }
-    .send-msg {
       display: flex;
-      width: 100%;
-      justify-content: space-between;
+      flex-direction: column;
     }
-    .send-msg input[type="text"] {
-      flex: 1;
-      margin-right: 1rem;
-      padding: 0.5rem;
-      border-radius: 5px;
-      border: none;
-    }
-    .send-msg input[type="submit"] {
-      padding: 0.5rem 1rem;
-      background: #3a3af3;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-    .me, .notMe {
+    .user-card {
+      display: flex;
+      align-items: center;
+      background: #e9ecef;
+      border-radius: 10px;
       padding: 10px;
-      margin: 5px;
-      border-radius: 5px;
-      max-width: 70%;
+      margin: 6px 0;
+      cursor: pointer;
+      transition: background 0.3s;
     }
-    .me {
-      background: #3a3af3;
-      align-self: flex-end;
+    .user-card:hover {
+      background: #dee2e6;
     }
-    .notMe {
-      background: #555;
-    }
-    .user-info img {
-      height: 30px;
+    .user-card img {
+      width: 40px;
+      height: 40px;
       border-radius: 50%;
       margin-right: 10px;
     }
-    #settingsContainer {
-      display: none;
-      margin-top: 1rem;
+    .user-card span {
+      font-weight: 600;
     }
-    .online-dot {
-      height: 10px;
-      width: 10px;
-      background-color: #0f0;
+    .messages {
+      flex: 1;
+      width: 100%;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      gap: 10px;
+    }
+    .message-block {
+      display: flex;
+      flex-direction: column;
+      max-width: 70%;
+    }
+    .message-header {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 4px;
+    }
+    .message-header img {
+      width: 30px;
+      height: 30px;
       border-radius: 50%;
-      display: inline-block;
-      margin-right: 5px;
+    }
+    .message-header span {
+      font-size: 0.85rem;
+      font-weight: bold;
+    }
+    .message {
+      padding: 12px 18px;
+      border-radius: 20px;
+      font-size: 1rem;
+      line-height: 1.5;
+      word-wrap: break-word;
+      position: relative;
+    }
+    .me {
+      align-self: flex-end;
+      background: #dcf8c6;
+      color: #000;
+      border-top-right-radius: 0;
+    }
+    .notMe {
+      align-self: flex-start;
+      background: #f1f0f0;
+      color: #000;
+      border-top-left-radius: 0;
+    }
+    .send-msg {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background: #ffffff;
+      border-top: 1px solid #dee2e6;
+      position: sticky;
+      bottom: 0;
+      width: 100%;
+    }
+    .send-msg input[type="text"] {
+      flex: 1;
+      padding: 10px;
+      border-radius: 20px;
+      border: 1px solid #ced4da;
+      margin-right: 10px;
+    }
+    .send-msg input[type="file"] {
+      display: none;
+    }
+    .send-msg label {
+      margin-right: 10px;
+      cursor: pointer;
+      font-size: 20px;
+      color: #007bff;
+    }
+    .send-msg button {
+      background: #007bff;
+      border: none;
+      color: white;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
   </style>
 </head>
@@ -136,15 +225,15 @@
     <div class="top-bar">
       <div>
         <input type="text" id="searchInput" placeholder="Search users...">
-        <button onclick="searchFriend()">Search</button>
-        <button onclick="loadAllUsers()">All Users</button>
-        <button onclick="logout()">Logout</button>
-        <button onclick="toggleSettings()">Settings</button>
+        <button onclick="searchFriend()"><i class="fas fa-search"></i></button>
+        <button onclick="loadAllUsers()"><i class="fas fa-users"></i></button>
+        <button onclick="logout()"><i class="fas fa-sign-out-alt"></i></button>
+        <button onclick="toggleSettings()"><i class="fas fa-cog"></i></button>
       </div>
       <div id="currentUser" class="user-info"></div>
     </div>
 
-    <div id="settingsContainer">
+    <div id="settingsContainer" style="display: none;">
       <h3>Update Profile</h3>
       <input type="text" id="newUsername" placeholder="New Username">
       <input type="file" id="newProfilePic">
@@ -153,15 +242,19 @@
 
     <div id="friendsList" class="friends-list"></div>
     <div id="messages" class="messages"></div>
+
     <div class="send-msg">
+      <label for="fileInput"><i class="fas fa-paperclip"></i></label>
+      <input type="file" id="fileInput" accept="image/*,application/pdf">
       <input type="text" id="msgTxt" placeholder="Type your message...">
-      <input type="submit" value="Send" onclick="sendMsg()">
+      <button onclick="sendMsg()"><i class="fas fa-paper-plane"></i></button>
     </div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, sendPasswordResetEmail, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
+  
     import { getDatabase, ref, set, get, child, onChildAdded, update } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js";
     import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-storage.js";
 
@@ -318,6 +411,35 @@
       alert("Profile updated.");
       location.reload();
     };
+
+document.getElementById('searchInput').addEventListener('input', function () {
+  const query = this.value.toLowerCase();
+  const userCards = document.querySelectorAll('.user-card');
+
+  userCards.forEach(card => {
+    const name = card.textContent.toLowerCase();
+    card.style.display = name.includes(query) ? 'flex' : 'none';
+  });
+});
+
+    window.openFullScreen = function (id) {
+      document.querySelectorAll('.fullscreen-view').forEach(div => div.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
+    };
+
+    window.closeFullScreen = function () {
+      document.querySelectorAll('.fullscreen-view').forEach(div => div.classList.remove('active'));
+    };
+    
+  document.getElementById('searchInput').addEventListener('input', function () {
+      const query = this.value.toLowerCase();
+      const userCards = document.querySelectorAll('.user-card');
+
+      userCards.forEach(card => {
+        const name = card.textContent.toLowerCase();
+        card.style.display = name.includes(query) ? 'flex' : 'none';
+      });
+    });
   </script>
 </body>
 </html>
