--- a/public/index.html
+++ b/public/index.html
@@ -7,199 +7,253 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body {
-      font-family: 'Orbitron', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      color: #212529;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-    .auth-container, .chat-container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-    }
-    .auth-box {
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 2rem;
-      margin: 1rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      width: 300px;
-    }
-    .auth-box input, .auth-box button {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      width: 100%;
-      border: 1px solid #ced4da;
-      border-radius: 8px;
-    }
-    .auth-box input {
-      background: #fff;
-      color: #212529;
-    }
-    .auth-box button {
-      background: #007bff;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .auth-box button:hover {
-      background: #0056b3;
-    }
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      background: #ffffff;
-      padding: 1rem;
-      border-bottom: 1px solid #dee2e6;
-      align-items: center;
-    }
-    .top-bar input {
-      padding: 0.5rem;
-      border-radius: 6px;
-      border: 1px solid #ced4da;
-      width: 200px;
-    }
-    .top-bar button {
-      margin-left: 8px;
-      background: none;
-      border: none;
-      color: #007bff;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    .top-bar button i {
-      pointer-events: none;
-    }
-    .friends-list {
-      width: 100%;
-      background: #ffffff;
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-      margin-bottom: 1rem;
-      max-height: 250px;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-    }
-    .user-card {
-      display: flex;
-      align-items: center;
-      background: #e9ecef;
-      border-radius: 10px;
-      padding: 10px;
-      margin: 6px 0;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .user-card:hover {
-      background: #dee2e6;
-    }
-    .user-card img {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin-right: 10px;
-    }
-    .user-card span {
-      font-weight: 600;
-    }
-    .messages {
-      flex: 1;
-      width: 100%;
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      padding: 10px;
-      gap: 10px;
-    }
-    .message-block {
-      display: flex;
-      flex-direction: column;
-      max-width: 70%;
-    }
-    .message-header {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-bottom: 4px;
-    }
-    .message-header img {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-    }
-    .message-header span {
-      font-size: 0.85rem;
-      font-weight: bold;
-    }
-    .message {
-      padding: 12px 18px;
-      border-radius: 20px;
-      font-size: 1rem;
-      line-height: 1.5;
-      word-wrap: break-word;
-      position: relative;
-    }
-    .me {
-      align-self: flex-end;
-      background: #dcf8c6;
-      color: #000;
-      border-top-right-radius: 0;
-    }
-    .notMe {
-      align-self: flex-start;
-      background: #f1f0f0;
-      color: #000;
-      border-top-left-radius: 0;
-    }
-    .send-msg {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      background: #ffffff;
-      border-top: 1px solid #dee2e6;
-      position: sticky;
-      bottom: 0;
-      width: 100%;
-    }
-    .send-msg input[type="text"] {
-      flex: 1;
-      padding: 10px;
-      border-radius: 20px;
-      border: 1px solid #ced4da;
-      margin-right: 10px;
-    }
-    .send-msg input[type="file"] {
-      display: none;
-    }
-    .send-msg label {
-      margin-right: 10px;
-      cursor: pointer;
-      font-size: 20px;
-      color: #007bff;
-    }
-    .send-msg button {
-      background: #007bff;
-      border: none;
-      color: white;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 18px;
-    }
+ /* Reset & Base */
+body {
+  font-family: 'Orbitron', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #f7f9fc;
+  color: #212529;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Containers */
+.auth-container,
+.chat-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
+.auth-box {
+  background: #ffffff;
+  border-radius: 16px;
+  padding: 2rem;
+  margin-top: 3rem;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 350px;
+}
+
+.auth-box input,
+.auth-box button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border-radius: 8px;
+  font-size: 1rem;
+  border: 1px solid #ced4da;
+}
+
+.auth-box input {
+  background: #fff;
+}
+
+.auth-box button {
+  background: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.auth-box button:hover {
+  background: #0056b3;
+}
+
+/* Top bar */
+.top-bar {
+  width: 100%;
+  background: #fff;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #dee2e6;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+.top-bar input {
+  flex: 1;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: 1px solid #ced4da;
+  margin-right: 8px;
+}
+
+.top-bar button {
+  background: none;
+  border: none;
+  color: #007bff;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+/* Friends list */
+.friends-list {
+  width: 100%;
+  max-width: 400px;
+  background: #ffffff;
+  border-radius: 16px;
+  padding: 1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1rem;
+  overflow-y: auto;
+  max-height: 300px;
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  background: #e9ecef;
+  border-radius: 12px;
+  padding: 12px;
+  margin: 6px 0;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.user-card:hover {
+  background: #d6dee5;
+}
+
+.user-card img {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.user-card .username {
+  font-weight: bold;
+}
+
+/* Chat box */
+.chat-box {
+  flex: 1;
+  width: 100%;
+  max-width: 600px;
+  background: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+/* Messages */
+.messages {
+  flex: 1;
+  padding: 1rem;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  background: #f1f1f1;
+}
+
+.message {
+  max-width: 70%;
+  padding: 10px 16px;
+  border-radius: 20px;
+  font-size: 1rem;
+  line-height: 1.4;
+  word-wrap: break-word;
+  position: relative;
+}
+
+.me {
+  align-self: flex-end;
+  background: #dcf8c6;
+  border-top-right-radius: 0;
+}
+
+.notMe {
+  align-self: flex-start;
+  background: #ffffff;
+  border-top-left-radius: 0;
+}
+
+/* Message sender name */
+.sender-name {
+  font-size: 0.75rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+}
+
+/* Send message box */
+.send-msg {
+  display: flex;
+  align-items: center;
+  padding: 12px;
+  background: #fff;
+  border-top: 1px solid #dee2e6;
+}
+
+.send-msg input[type="text"] {
+  flex: 1;
+  padding: 10px;
+  border-radius: 20px;
+  border: 1px solid #ced4da;
+  margin-right: 10px;
+}
+
+.send-msg input[type="file"] {
+  display: none;
+}
+
+.send-msg label {
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 22px;
+  color: #007bff;
+}
+
+.send-msg button {
+  background: #007bff;
+  border: none;
+  color: white;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
+
+/* Responsive mobile fix */
+@media screen and (max-width: 600px) {
+  .auth-box, .friends-list, .chat-box {
+    width: 100%;
+    max-width: 100%;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  .messages {
+    padding: 10px 8px;
+  }
+
+  .send-msg {
+    padding: 8px;
+  }
+
+  .user-card img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .message {
+    font-size: 0.95rem;
+  }
+}
   </style>
 </head>
 <body>
@@ -233,7 +287,7 @@
       <div id="currentUser" class="user-info"></div>
     </div>
 
-    <div id="settingsContainer" style="display: none;">
+    <div id="settingsContainer">
       <h3>Update Profile</h3>
       <input type="text" id="newUsername" placeholder="New Username">
       <input type="file" id="newProfilePic">
@@ -254,6 +308,7 @@
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, sendPasswordResetEmail, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js";
+
   
     import { getDatabase, ref, set, get, child, onChildAdded, update } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-database.js";
     import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.15.0/firebase-storage.js";
@@ -270,60 +325,85 @@
     };
 
     const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
-    const storage = getStorage(app);
-    let currentUserEmail = "", currentUsername = "", receiver = "";
+const auth = getAuth(app);
+const db = getDatabase(app);
+const storage = getStorage(app);
+let currentUserEmail = "", currentUsername = "", receiver = "";
 
-    function encodeEmail(email) {
-      return email.replace(/\./g, '(dot)');
-    }
+function encodeEmail(email) {
+  return email.replace(/\./g, '(dot)');
+}
 
-    onAuthStateChanged(auth, user => {
-      if (user) {
-        currentUserEmail = user.email;
-        get(child(ref(db), "users/" + encodeEmail(currentUserEmail))).then(snapshot => {
-          const data = snapshot.val();
+onAuthStateChanged(auth, user => {
+  if (user) {
+    currentUserEmail = user.email;
+    get(child(ref(db), "users/" + encodeEmail(currentUserEmail)))
+      .then(snapshot => {
+        const data = snapshot.val();
+        if (data) {
           currentUsername = data.username || user.email;
-          const photo = data.photoURL ? `<img src="${data.photoURL}" />` : "";
-          document.getElementById("currentUser").innerHTML = `${photo} ${currentUsername}`;
-          showChat();
-        });
-        set(ref(db, `activeUsers/${encodeEmail(user.email)}`), true);
-      }
-    });
+          const photo = data.photoURL 
+            ? `<img src="${data.photoURL}" style="width:30px;height:30px;border-radius:50%;vertical-align:middle;margin-right:8px;" />` 
+            : "";
+          const currentUserDiv = document.getElementById("currentUser");
+          if (currentUserDiv) {
+            currentUserDiv.innerHTML = `${photo}<strong>${currentUsername}</strong>`;
+          }
+        } else {
+          currentUsername = user.email;
+        }
+        showChat();
+      })
+      .catch(error => {
+        console.error("Erreur lors de la récupération de l'utilisateur :", error);
+      });
 
-    window.register = async () => {
-      const email = registerEmail.value, pass = registerPassword.value, username = registerUsername.value;
-      const file = profilePic.files[0];
-      const cred = await createUserWithEmailAndPassword(auth, email, pass);
-      let photoURL = "";
-      if (file) {
-        const fileRef = sRef(storage, 'profilePics/' + encodeEmail(email));
-        await uploadBytes(fileRef, file);
-        photoURL = await getDownloadURL(fileRef);
-      }
-      await set(ref(db, "users/" + encodeEmail(email)), { email, username, photoURL });
-      alert("Account created. You can now login.");
-    };
+    set(ref(db, `activeUsers/${encodeEmail(user.email)}`), true);
+  }
+});
 
-    window.login = async () => {
-      try {
-        await signInWithEmailAndPassword(auth, loginEmail.value, loginPassword.value);
-      } catch (err) {
-        alert("Login failed: " + err.message);
-      }
-    };
+window.register = async () => {
+  const email = registerEmail.value;
+  const pass = registerPassword.value;
+  const username = registerUsername.value;
+  const file = profilePic.files[0];
+  try {
+    const cred = await createUserWithEmailAndPassword(auth, email, pass);
+    let photoURL = "";
+    if (file) {
+      const fileRef = sRef(storage, 'profilePics/' + encodeEmail(email));
+      await uploadBytes(fileRef, file);
+      photoURL = await getDownloadURL(fileRef);
+    }
+    await set(ref(db, "users/" + encodeEmail(email)), { email, username, photoURL });
+    alert("Account created. You can now login.");
+  } catch (err) {
+    alert("Registration failed: " + err.message);
+  }
+};
 
-    window.logout = async () => {
-      await signOut(auth);
-      location.reload();
-    };
+window.login = async () => {
+  try {
+    await signInWithEmailAndPassword(auth, loginEmail.value, loginPassword.value);
+  } catch (err) {
+    alert("Login failed: " + err.message);
+  }
+};
 
-    window.resetPassword = () => {
-      const email = prompt("Enter email to reset password:");
-      if (email) sendPasswordResetEmail(auth, email).then(() => alert("Check your inbox."));
-    };
+window.logout = async () => {
+  await signOut(auth);
+  location.reload();
+};
+
+window.resetPassword = () => {
+  const email = prompt("Enter email to reset password:");
+  if (email) {
+    sendPasswordResetEmail(auth, email)
+      .then(() => alert("Check your inbox."))
+      .catch(err => alert("Error: " + err.message));
+  }
+};
+
 
     function showChat() {
       authContainer.style.display = "none";
